--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -1857,7 +1857,7 @@ import "css/service/style_services.css";
                 <div class="faq-full" id="faqs-anchor">
                   <div class="FAQ">
                     <div class="fa">
-                      <h3>Which brands of microwaves do you repair?</h3>
+                      <h3>What brands of washing machines do you repair?</h3>
                     </div>
 
                     <div class="fa_plus">︾</div>
@@ -1867,42 +1867,33 @@ import "css/service/style_services.css";
 
                   <div class="questions">
                     <p>
-                      At Same Day Appliance Repair, we repair all major brands
-                      of microwaves, including:
+                      At Same Day Appliance Repair, we specialize in repairing a wide range of washing machine brands to ensure your laundry routine is back on track as quickly as possible. Here are some of the brands we service:
                     </p>
                     <ul>
-                      <li>Samsung</li>
-                      <li>LG</li>
-                      <li>Panasonic</li>
-                      <li>GE</li>
                       <li>Whirlpool</li>
-                      <li>Kenmore</li>
-                      <li>Sharp</li>
-                      <li>Bosch</li>
+                      <li>LG</li>
+                      <li>Samsung</li>
                       <li>Maytag</li>
-                      <li>KitchenAid</li>
+                      <li>GE (General Electric)</li>
+                      <li>Bosch</li>
+                      <li>Kenmore</li>
                       <li>Frigidaire</li>
-                      <li>Toshiba</li>
-                      <li>Amana</li>
-                      <li>Magic Chef</li>
-                      <li>Daewoo</li>
                       <li>Electrolux</li>
-                      <li>Hamilton Beach</li>
-                      <li>Cuisinart</li>
-                      <li>Breville</li>
-                      <li>RCA</li>
+                      <li>Amana</li>
+                      <li>Hotpoint</li>
+                      <li>Haier</li>
+                      <li>Miele</li>
+                      <li>Speed Queen</li>
+                      <li>Fisher & Paykel</li>
                     </ul>
-                    <p>and more....</p>
                     <p>
-                      No matter the brand or model, our skilled technicians are
-                      equipped to handle all your microwave repair needs quickly
-                      and efficiently.
+                      If your washing machine brand is not listed here, please give us a call. Our expert technicians are well-versed in a variety of models and brands, and we are confident we can help you with your repair needs.
                     </p>
                   </div>
 
                   <div class="FAQ">
                     <div class="fa">
-                      <h3>Can I repair my microwave myself?</h3>
+                      <h3>Why is my washing machine not starting?</h3>
                     </div>
 
                     <div class="fa_plus">︾</div>
@@ -1912,50 +1903,76 @@ import "css/service/style_services.css";
 
                   <div class="questions">
                     <p>
-                      At Same Day Appliance Repair, we understand that you might
-                      be tempted to repair your microwave yourself. While it's
-                      possible to handle simple issues like replacing a new
-                      switch, most microwave repairs involve complex components
-                      and high voltage, which can be dangerous.
+                      If your washing machine is not starting, there could be several reasons behind the issue. Here are some common causes and potential solutions:
                     </p>
-                    <p>
-                      For instance, if your microwave oven isn't heating food,
-                      it could be due to various reasons, such as a
-                      malfunctioning magnetron or a faulty door switch. These
-                      parts need to be tested and replaced with precision. Even
-                      after you have switched out a faulty component, the
-                      microwave needs to be thoroughly tested to ensure it works
-                      safely.
-                    </p>
-                    <p>
-                      It's essential to remember that microwaves, like most
-                      appliances, should be unplugged before any repair work
-                      begins. However, even an unplugged microwave can retain
-                      dangerous electrical charges. Therefore, if you’re not
-                      experienced with electrical repairs, it’s best not to
-                      attempt fixing it yourself.
-                    </p>
-                    <p>
-                      If you decide to proceed with a DIY repair, don't forget
-                      to ensure that the microwave is powered off and unplugged.
-                      After making any repairs, you should confirm the appliance
-                      heats food evenly and operates without any unusual sound.
-                    </p>
-                    <p>
-                      In many cases, the safest and most efficient job is to
-                      leave microwave repairs to the professionals. Our team at
-                      Same Day Appliance Repair is highly trained to handle all
-                      types of microwave issues. Whether it's a new switch or
-                      any other part that needs to be fixed, we’ve got you
-                      covered. Save yourself the hassle and potential danger;
-                      let us get your microwave back in working order so you can
-                      cook meals without worry.
-                    </p>
+                    <ol>
+                      <li>
+                        <b>Power Supply Issues</b>
+                        <ul>
+                          <li>Check the Plug: Ensure the washing machine is properly plugged into the electrical outlet.</li>
+                          <li>Outlet Function: Test the outlet with another device to make sure it's working.</li>
+                          <li>Power Cord: Inspect the power cord for any signs of damage.</li>
+                        </ul>
+                      </li>
+                    
+                      <li>
+                        <b>Door/Lid Switch</b>
+                        <ul>
+                          <li>Proper Closure: Make sure the door or lid is securely closed. Many machines won't start if the door isn't fully latched.</li>
+                          <li>Faulty Switch: If the door or lid switch is defective, the machine may not recognize that the door is closed. This switch may need to be replaced.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Control Lock</b>
+                        <ul>
+                          <li>Child Lock Feature: Some washing machines have a control lock or child lock feature that prevents the machine from starting. Check your user manual to see if this feature is activated and how to disable it.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Timer or Control Board</b>
+                        <ul>
+                          <li>Malfunctioning Timer: If the timer is not working correctly, it may not advance to the start position. A faulty timer may need to be replaced.</li>
+                          <li>Control Board Issues: A malfunctioning control board can prevent the machine from starting. Inspect for any visible signs of damage or loose connections.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Fuses or Circuit Breakers</b>
+                        <ul>
+                          <li>Blown Fuse: Check the fuse box for any blown fuses and replace them if necessary.</li>
+                          <li>Tripped Circuit Breaker: Reset the circuit breaker to see if that resolves the issue.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Start Button</b>
+                        <ul>
+                          <li>Faulty Start Button: If the start button is not functioning properly, the machine won't start. This may require professional repair.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Water Supply</b>
+                        <ul>
+                          <li>Water Valves: Make sure the water supply valves are open. Some machines won't start if they don't detect water flow.</li>
+                        </ul>
+                      </li>
+                      
+                      <li>
+                        <b>Error Codes</b>
+                        <ul>
+                          <li>Display Panel: Check the display panel for any error codes. Refer to the user manual to understand what the codes mean and how to fix them.</li>
+                        </ul>
+                      </li>
+                    </ol>
+                    <p>If after these checks your washing machine still won't start, it may be time to call in professional help. At Same Day Appliance Repair, our experienced technicians are ready to diagnose and fix any issues to get your washing machine up and running as quickly as possible.</p>
                   </div>
 
                   <div class="FAQ">
                     <div class="fa">
-                      <h3>Is it safe to repair a microwave on my own?</h3>
+                      <h3>Why is my washing machine not spinning or agitating?</h3>
                     </div>
 
                     <div class="fa_plus">︾</div>
@@ -1965,35 +1982,85 @@ import "css/service/style_services.css";
 
                   <div class="questions">
                     <p>
-                      At Same Day Appliance Repair, we understand that you might
-                      be considering fixing your microwave on your own. However,
-                      safety is a major concern when it comes to microwave
-                      repairs.
+                      If your washing machine is not spinning or agitating, there could be several underlying issues. Here are some common causes and potential solutions to help you troubleshoot the problem:
                     </p>
-                    <p>
-                      Microwaves contain high-voltage components that can retain
-                      a charge even when the appliance is unplugged. This means
-                      you can still get shocked if you accidentally touch the
-                      wrong one area inside the microwave. It's also important
-                      to note that even after you've plugged the microwave back
-                      in, it needs to be thoroughly tested to ensure it properly
-                      heats food and operates safely.
-                    </p>
-                    <p>
-                      If you've decided to attempt a repair yourself, make sure
-                      the microwave is completely unplugged before you start.
-                      However, due to the potential risks involved, we strongly
-                      recommend leaving the job to professionals. Our skilled
-                      technicians at Same Day Appliance Repair are trained to
-                      handle these dangerous components safely and efficiently.
-                    </p>
-                    <p>
-                      So, is it safe to repair a microwave on your own?
-                      Generally, no. For your safety and peace of mind, it's
-                      best to let the experts handle it. We're here to ensure
-                      your microwave is repaired correctly and safely, so you
-                      can get back to cooking without any concerns.
-                    </p>
+
+                    <ol>
+
+                      <li>
+                        <b>Lid Switch</b>
+                        <ul>
+                          <li>Proper Functioning: The lid switch ensures the machine only operates when the lid is closed. If the switch is faulty or not engaging properly, the machine won't spin or agitate.</li>
+                          <li>Test the Switch: You can test the lid switch with a multimeter for continuity. If it's defective, you'll need to replace it.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Drive Belt</b>
+                        <ul>
+                          <li>Worn or Broken Belt: The drive belt connects the motor to the drum. If it's worn out, broken, or has slipped off, the drum won't spin or agitate.</li>
+                          <li>Inspect the Belt: Check the belt for wear and tear. If it's damaged or loose, replace it.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Motor</b>
+                        <ul>
+                          <li>Malfunctioning Motor: A faulty motor can prevent the machine from spinning or agitating.</li>
+                          <li>Motor Coupling: On direct-drive washers, a damaged motor coupling can cause issues. Inspect and replace if necessary.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Transmission or Clutch Assembly</b>
+                        <ul>
+                          <li>Transmission Issues: The transmission converts the motor's rotation into the drum's spinning and agitating actions. A malfunctioning transmission can prevent these actions.</li>
+                          <li>Clutch Assembly: In top-loading washers, a worn-out clutch assembly can cause issues with spinning. Inspect and replace if needed.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Drive Pulley</b>
+                        <ul>
+                          <li>Faulty or Loose Drive Pulley: The drive pulley helps to spin the drum. If it's loose or defective, the drum won't spin properly.</li>
+                          <li> Inspect the Pulley: Check the drive pulley for signs of damage or looseness and tighten or replace as needed.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Control Board or Timer</b>
+                        <ul>
+                          <li>Malfunctioning Control Board: The control board manages the washing machine's functions. A faulty control board can prevent spinning and agitation.</li>
+                          <li>Defective Timer: If the timer is not advancing correctly, it might not initiate the spin or agitate cycles.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Balance Load</b>
+                        <ul>
+                          <li>Unbalanced Load: An unbalanced load can prevent the machine from spinning properly.</li>
+                          <li>Redistribute the Load: Stop the machine and redistribute the clothes evenly around the drum.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Capacitor</b>
+                        <ul>
+                          <li>Faulty Capacitor: The capacitor helps the motor run. If it's defective, the motor might not have enough power to spin or agitate.</li>
+                          <li>Test the Capacitor: Use a multimeter to test the capacitor and replace it if it's faulty.</li>
+                        </ul>
+                      </li>
+
+                      <li>
+                        <b>Suspension Springs or Dampers</b>
+                        <ul>
+                          <li>Broken Springs or Dampers: These components help stabilize the drum during spinning. If they are worn out or broken, the drum may not spin properly.</li>
+                          <li> Inspect and Replace: Check the suspension springs and dampers and replace them if necessary.</li>
+                        </ul>
+                      </li>
+                      
+                    </ol>
+                    <p>If you've gone through these checks and your washing machine still isn't spinning or agitating, it's advisable to consult a professional repair service. At Same Day Appliance Repair, our skilled technicians can quickly diagnose and resolve any issues to get you</p>
                   </div>
 
                   <div class="FAQ">
